--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,11 @@
     "content_scripts": [
         {
             "matches": [
-                "*://*.u-cursos.cl/ingenieria/2/foro_institucion/*",
-                "*://www.u-cursos.cl/ingenieria/*/*/*/*/foro/*",
-                "*://www.u-cursos.cl/ingenieria/*/*/*/*/grupos/*/*/foro/*",
+                "*://www.u-cursos.cl/uchile/*/0/*/1/foro/",
                 "*://www.u-cursos.cl/uchile/4/foro_institucion/*",
-                "*://www.u-cursos.cl/uchile/*/0/*/1/foro/"
+                "*://*.u-cursos.cl/*/2/foro_institucion/*",
+                "*://www.u-cursos.cl/*/*/*/*/*/foro/*",
+                "*://www.u-cursos.cl/*/*/*/*/*/grupos/*/*/foro/*"
             ],
             "js": [
                 "js/hate-api.js"
